--- a/.editorconfig
+++ b/.editorconfig
@@ -13,5 +13,10 @@ trim_trailing_whitespace = true
 max_line_length = 0
 trim_trailing_whitespace = false
 
+[Makefile]
+max_line_length = 0
+indent_style = tab
+indent_size = 4
+
 [COMMIT_EDITMSG]
 max_line_length = 0
